TP_4/obj/tp_4.output
Terminals unused in grammar

   ERROR


Rules useless in parser due to conflicts

  140 declaradorAbstractoOP: declaradorAbstracto
  141                      | /* vacío */

  150 expresionConstanteOP: expresionConstante
  151                     | /* vacío */


Estado 3 conflictos: 3 reducción(ones)/reducción(ones)
Estado 35 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 46 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 47 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 51 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 54 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 55 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 56 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 57 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 75 conflictos: 1 reducción(ones)/reducción(ones)
Estado 93 conflictos: 4 reducción(ones)/reducción(ones)
Estado 95 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 96 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 97 conflictos: 1 desplazamiento/reducción, 1 reducción/reducción
Estado 102 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 137 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 142 conflictos: 1 reducción(ones)/reducción(ones)
Estado 161 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 162 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 164 conflictos: 2 reducción(ones)/reducción(ones)
Estado 180 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 181 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 182 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 198 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 200 conflictos: 1 reducción(ones)/reducción(ones)
Estado 216 conflictos: 1 reducción(ones)/reducción(ones)
Estado 231 conflictos: 2 reducción(ones)/reducción(ones)
Estado 232 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 239 conflictos: 1 reducción(ones)/reducción(ones)
Estado 246 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 259 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 261 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | declaracion '\n'
    5     | expresion '\n'
    6     | sentencia '\n'

    7 expresion: expAsignacion
    8          | expresion ',' expAsignacion

    9 expAsignacion: expCondicional
   10              | expUnaria operAsigancion expAsignacion

   11 expCondicional: expOr
   12               | expOr '?' expresion ':' expCondicional

   13 operAsigancion: OP_ASIGANCION
   14               | '='

   15 expOr: expAnd
   16      | expOr OP_OR expAnd

   17 expAnd: expIgualdad
   18       | expAnd OP_AND expIgualdad

   19 expIgualdad: expRelacional
   20            | expIgualdad OP_IGUALDAD expRelacional

   21 expRelacional: expCorrimiento
   22              | expRelacional OP_RELACIONAL expCorrimiento
   23              | expRelacional '<' expCorrimiento
   24              | expRelacional '>' expCorrimiento

   25 expCorrimiento: expAditiva
   26               | expCorrimiento OP_CORRIMIENTO expAditiva

   27 expAditiva: expMultiplicativa
   28           | expAditiva '+' expMultiplicativa
   29           | expAditiva '-' expMultiplicativa

   30 expMultiplicativa: expDeConversion
   31                  | expMultiplicativa '*' expDeConversion
   32                  | expMultiplicativa '/' expDeConversion
   33                  | expMultiplicativa '%' expDeConversion

   34 expDeConversion: expUnaria
   35                | '(' nombreDeTipo ')' expDeConversion

   36 expUnaria: expPostfijo
   37          | OP_INCREMENTO_DECREMENTO expUnaria
   38          | operUnario expDeConversion
   39          | SIZEOF expUnaria
   40          | SIZEOF '(' nombreDeTipo ')'

   41 operUnario: '&'
   42           | '*'
   43           | '-'
   44           | '!'
   45           | '+'
   46           | '~'

   47 expPostfijo: expPrimaria
   48            | expPostfijo '[' expresion ']'
   49            | expPostfijo '(' listaArgumentosOP ')'
   50            | expPostfijo '.' IDENTIFICADOR
   51            | expPostfijo OP_INCREMENTO_DECREMENTO
   52            | expPostfijo OP_ACCESO

   53 listaArgumentosOP: listaArgumentos
   54                  | /* vacío */

   55 listaArgumentos: expAsignacion
   56                | listaArgumentos ',' expAsignacion

   57 expPrimaria: IDENTIFICADOR
   58            | CONSTANTE_DECIMAL
   59            | CONSTANTE_HEXA
   60            | CONSTANTE_OCTAL
   61            | CONSTANTE_REAL
   62            | LITERAL_CADENA
   63            | '(' expresion ')'

   64 declaracion: especificadoresDeDeclaracion listaDeDeclaradoresOP

   65 listaDeDeclaradoresOP: listaDeDeclaradores
   66                      | /* vacío */

   67 especificadoresDeDeclaracion: especificadorDeClaseDeAlmacenamiento especificadoresDeDeclaracionOP
   68                             | especificadorDeTipo especificadoresDeDeclaracionOP
   69                             | calificadorDeTipo especificadoresDeDeclaracionOP

   70 especificadoresDeDeclaracionOP: especificadoresDeDeclaracion
   71                               | /* vacío */

   72 listaDeDeclaradores: declarador
   73                    | listaDeDeclaradores ',' declarador

   74 declarador: decla
   75           | decla '=' inicializador

   76 inicializador: expAsignacion
   77              | '{' listaDeInicializadores '}'
   78              | '{' listaDeInicializadores ',' '}'

   79 listaDeInicializadores: inicializador
   80                       | listaDeInicializadores ',' inicializador

   81 especificadorDeClaseDeAlmacenamiento: ESPEC_DE_CLASE

   82 especificadorDeTipo: TIPO_DE_DATO
   83                    | especificadorDeStructOUnion
   84                    | especificadorDeEnum
   85                    | nombreDeTypedef

   86 calificadorDeTipo: CALIFICADOR_DE_TIPO

   87 especificadorDeStructOUnion: structOUnion identificadorOP '{' listaDeDeclaracionesStruct '}'
   88                            | structOUnion IDENTIFICADOR

   89 identificadorOP: IDENTIFICADOR
   90                | /* vacío */

   91 structOUnion: STRUCT_O_UNION

   92 listaDeDeclaracionesStruct: declaracionStruct
   93                           | listaDeDeclaracionesStruct declaracionStruct

   94 declaracionStruct: listaDeCalificadores declaradoresStruct

   95 listaDeCalificadores: especificadorDeTipo listaDeCalificadoresOP
   96                     | calificadorDeTipo listaDeCalificadoresOP

   97 listaDeCalificadoresOP: listaDeCalificadores
   98                       | /* vacío */

   99 declaradoresStruct: declaStruct
  100                   | declaradoresStruct ',' declaStruct

  101 declaStruct: decla
  102            | ':' expresionConstante
  103            | decla ':' expresionConstante

  104 decla: declaradorDirecto
  105      | puntero declaradorDirecto

  106 puntero: '*' listaDeCalificadoresTipoOP
  107        | '*' listaDeCalificadoresTipoOP puntero

  108 listaDeCalificadoresTipoOP: listaDeCalificadoresTipo
  109                           | /* vacío */

  110 listaDeCalificadoresTipo: calificadorDeTipo
  111                         | listaDeCalificadoresTipo calificadorDeTipo

  112 declaradorDirecto: IDENTIFICADOR
  113                  | '(' decla ')'
  114                  | declaradorDirecto '[' expresionConstanteOP ']'
  115                  | declaradorDirecto '(' listaTiposParametros ')'
  116                  | declaradorDirecto '(' listaDeIdentifiacadoresOP ')'

  117 expresionConstanteOP: expresionConstante
  118                     | /* vacío */

  119 listaDeIdentifiacadoresOP: listaDeIdentifiacadores
  120                          | /* vacío */

  121 listaTiposParametros: listaDeParametros
  122                     | listaDeParametros ',' '.' '.' '.'

  123 listaDeParametros: declaracionDeParametro
  124                  | listaDeParametros ',' declaracionDeParametro

  125 declaracionDeParametro: especificadoresDeDeclaracion decla
  126                       | especificadoresDeDeclaracion declaradorAbstractoOP

  127 declaradorAbstractoOP: declaradorAbstracto
  128                      | /* vacío */

  129 listaDeIdentifiacadores: IDENTIFICADOR
  130                        | listaDeIdentifiacadores ',' IDENTIFICADOR

  131 especificadorDeEnum: ESPECIFICADOR_ENUM identificadorOP '{' listaDeEnumeradores '}'
  132                    | ESPECIFICADOR_ENUM IDENTIFICADOR

  133 listaDeEnumeradores: enumerador
  134                    | listaDeEnumeradores ',' enumerador

  135 enumerador: constanteDeEnumeracion
  136           | constanteDeEnumeracion '=' expresionConstante

  137 constanteDeEnumeracion: IDENTIFICADOR

  138 nombreDeTypedef: IDENTIFICADOR

  139 nombreDeTipo: listaDeCalificadores declaradorAbstractoOP

  140 declaradorAbstractoOP: declaradorAbstracto
  141                      | /* vacío */

  142 declaradorAbstracto: puntero
  143                    | declaradorAbstractoDirecto
  144                    | puntero declaradorAbstractoDirecto

  145 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
  146                           | declaradorAbstractoDirectoOP '[' expresionConstanteOP ']'
  147                           | declaradorAbstractoDirectoOP '(' listaTiposParametrosOP ')'

  148 declaradorAbstractoDirectoOP: declaradorAbstractoDirecto
  149                             | /* vacío */

  150 expresionConstanteOP: expresionConstante
  151                     | /* vacío */

  152 listaTiposParametrosOP: listaTiposParametros
  153                       | /* vacío */

  154 sentencia: sentenciaExpresion
  155          | sentenciaCompuesta
  156          | sentenciaDeSeleccion
  157          | sentenciaDeIteracion
  158          | sentenciaEtiquetada
  159          | sentenciaDeSalto

  160 sentenciaExpresion: ';'
  161                   | expresion ';'

  162 sentenciaCompuesta: '{' listaDeDeclaracionesOP listaDeSentenciasOP '}'

  163 listaDeDeclaracionesOP: listaDeDeclaraciones
  164                       | /* vacío */

  165 listaDeSentenciasOP: listaDeSentencias
  166                    | /* vacío */

  167 listaDeDeclaraciones: declaracion
  168                     | listaDeDeclaraciones declaracion

  169 listaDeSentencias: sentencia
  170                  | listaDeSentencias sentencia

  171 sentenciaDeSeleccion: IF '(' expresion ')' sentencia
  172                     | IF '(' expresion ')' sentencia ELSE sentencia
  173                     | SWITCH '(' expresion ')' sentencia

  174 sentenciaDeIteracion: WHILE '(' expresion ')' sentencia
  175                     | DO sentencia WHILE '(' expresion ')' ';'
  176                     | FOR '(' expresionOP ';' expresionOP ';' expresionOP ')' sentencia

  177 expresionOP: expresion
  178            | /* vacío */

  179 sentenciaEtiquetada: CASE expresionConstante ':' sentencia
  180                    | DEFAULT ':' sentencia
  181                    | IDENTIFICADOR ':' sentencia

  182 sentenciaDeSalto: CONTINUE ';'
  183                 | BREAK ';'
  184                 | RETURN expresionOP ';'
  185                 | GOTO IDENTIFICADOR ';'

  186 expresionConstante: expCondicional


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5 6
'!' (33) 44
'%' (37) 33
'&' (38) 41
'(' (40) 35 40 49 63 113 115 116 145 147 171 172 173 174 175 176
')' (41) 35 40 49 63 113 115 116 145 147 171 172 173 174 175 176
'*' (42) 31 42 106 107
'+' (43) 28 45
',' (44) 8 56 73 78 80 100 122 124 130 134
'-' (45) 29 43
'.' (46) 50 122
'/' (47) 32
':' (58) 12 102 103 179 180 181
';' (59) 160 161 175 176 182 183 184 185
'<' (60) 23
'=' (61) 14 75 136
'>' (62) 24
'?' (63) 12
'[' (91) 48 114 146
']' (93) 48 114 146
'{' (123) 77 78 87 131 162
'}' (125) 77 78 87 131 162
'~' (126) 46
error (256)
IDENTIFICADOR (258) 50 57 88 89 112 129 130 132 137 138 181 185
LITERAL_CADENA (259) 62
CONSTANTE_DECIMAL (260) 58
CONSTANTE_OCTAL (261) 60
CONSTANTE_HEXA (262) 59
CONSTANTE_REAL (263) 61
TIPO_DE_DATO (264) 82
OP_ASIGANCION (265) 13
OP_IGUALDAD (266) 20
OP_OR (267) 16
OP_AND (268) 18
OP_RELACIONAL (269) 22
SIZEOF (270) 39 40
OP_INCREMENTO_DECREMENTO (271) 37 51
OP_CORRIMIENTO (272) 26
OP_ACCESO (273) 52
ESPEC_DE_CLASE (274) 81
CALIFICADOR_DE_TIPO (275) 86
STRUCT_O_UNION (276) 91
ESPECIFICADOR_ENUM (277) 131 132
IF (278) 171 172
SWITCH (279) 173
ELSE (280) 172
WHILE (281) 174 175
DO (282) 175
FOR (283) 176
CASE (284) 179
DEFAULT (285) 180
CONTINUE (286) 182
BREAK (287) 183
RETURN (288) 184
GOTO (289) 185
ERROR (290)


No terminales con las reglas donde aparecen

$accept (59)
    en la izquierda: 0
input (60)
    en la izquierda: 1 2, en la derecha: 0 2
line (61)
    en la izquierda: 3 4 5 6, en la derecha: 2
expresion (62)
    en la izquierda: 7 8, en la derecha: 5 8 12 48 63 161 171 172 173
    174 175 177
expAsignacion (63)
    en la izquierda: 9 10, en la derecha: 7 8 10 55 56 76
expCondicional (64)
    en la izquierda: 11 12, en la derecha: 9 12 186
operAsigancion (65)
    en la izquierda: 13 14, en la derecha: 10
expOr (66)
    en la izquierda: 15 16, en la derecha: 11 12 16
expAnd (67)
    en la izquierda: 17 18, en la derecha: 15 16 18
expIgualdad (68)
    en la izquierda: 19 20, en la derecha: 17 18 20
expRelacional (69)
    en la izquierda: 21 22 23 24, en la derecha: 19 20 22 23 24
expCorrimiento (70)
    en la izquierda: 25 26, en la derecha: 21 22 23 24 26
expAditiva (71)
    en la izquierda: 27 28 29, en la derecha: 25 26 28 29
expMultiplicativa (72)
    en la izquierda: 30 31 32 33, en la derecha: 27 28 29 31 32 33
expDeConversion (73)
    en la izquierda: 34 35, en la derecha: 30 31 32 33 35 38
expUnaria (74)
    en la izquierda: 36 37 38 39 40, en la derecha: 10 34 37 39
operUnario (75)
    en la izquierda: 41 42 43 44 45 46, en la derecha: 38
expPostfijo (76)
    en la izquierda: 47 48 49 50 51 52, en la derecha: 36 48 49 50
    51 52
listaArgumentosOP (77)
    en la izquierda: 53 54, en la derecha: 49
listaArgumentos (78)
    en la izquierda: 55 56, en la derecha: 53 56
expPrimaria (79)
    en la izquierda: 57 58 59 60 61 62 63, en la derecha: 47
declaracion (80)
    en la izquierda: 64, en la derecha: 4 167 168
listaDeDeclaradoresOP (81)
    en la izquierda: 65 66, en la derecha: 64
especificadoresDeDeclaracion (82)
    en la izquierda: 67 68 69, en la derecha: 64 70 125 126
especificadoresDeDeclaracionOP (83)
    en la izquierda: 70 71, en la derecha: 67 68 69
listaDeDeclaradores (84)
    en la izquierda: 72 73, en la derecha: 65 73
declarador (85)
    en la izquierda: 74 75, en la derecha: 72 73
inicializador (86)
    en la izquierda: 76 77 78, en la derecha: 75 79 80
listaDeInicializadores (87)
    en la izquierda: 79 80, en la derecha: 77 78 80
especificadorDeClaseDeAlmacenamiento (88)
    en la izquierda: 81, en la derecha: 67
especificadorDeTipo (89)
    en la izquierda: 82 83 84 85, en la derecha: 68 95
calificadorDeTipo (90)
    en la izquierda: 86, en la derecha: 69 96 110 111
especificadorDeStructOUnion (91)
    en la izquierda: 87 88, en la derecha: 83
identificadorOP (92)
    en la izquierda: 89 90, en la derecha: 87 131
structOUnion (93)
    en la izquierda: 91, en la derecha: 87 88
listaDeDeclaracionesStruct (94)
    en la izquierda: 92 93, en la derecha: 87 93
declaracionStruct (95)
    en la izquierda: 94, en la derecha: 92 93
listaDeCalificadores (96)
    en la izquierda: 95 96, en la derecha: 94 97 139
listaDeCalificadoresOP (97)
    en la izquierda: 97 98, en la derecha: 95 96
declaradoresStruct (98)
    en la izquierda: 99 100, en la derecha: 94 100
declaStruct (99)
    en la izquierda: 101 102 103, en la derecha: 99 100
decla (100)
    en la izquierda: 104 105, en la derecha: 74 75 101 103 113 125
puntero (101)
    en la izquierda: 106 107, en la derecha: 105 107 142 144
listaDeCalificadoresTipoOP (102)
    en la izquierda: 108 109, en la derecha: 106 107
listaDeCalificadoresTipo (103)
    en la izquierda: 110 111, en la derecha: 108 111
declaradorDirecto (104)
    en la izquierda: 112 113 114 115 116, en la derecha: 104 105 114
    115 116
expresionConstanteOP (105)
    en la izquierda: 117 118 150 151, en la derecha: 114 146
listaDeIdentifiacadoresOP (106)
    en la izquierda: 119 120, en la derecha: 116
listaTiposParametros (107)
    en la izquierda: 121 122, en la derecha: 115 152
listaDeParametros (108)
    en la izquierda: 123 124, en la derecha: 121 122 124
declaracionDeParametro (109)
    en la izquierda: 125 126, en la derecha: 123 124
declaradorAbstractoOP (110)
    en la izquierda: 127 128 140 141, en la derecha: 126 139
listaDeIdentifiacadores (111)
    en la izquierda: 129 130, en la derecha: 119 130
especificadorDeEnum (112)
    en la izquierda: 131 132, en la derecha: 84
listaDeEnumeradores (113)
    en la izquierda: 133 134, en la derecha: 131 134
enumerador (114)
    en la izquierda: 135 136, en la derecha: 133 134
constanteDeEnumeracion (115)
    en la izquierda: 137, en la derecha: 135 136
nombreDeTypedef (116)
    en la izquierda: 138, en la derecha: 85
nombreDeTipo (117)
    en la izquierda: 139, en la derecha: 35 40
declaradorAbstracto (118)
    en la izquierda: 142 143 144, en la derecha: 127 140 145
declaradorAbstractoDirecto (119)
    en la izquierda: 145 146 147, en la derecha: 143 144 148
declaradorAbstractoDirectoOP (120)
    en la izquierda: 148 149, en la derecha: 146 147
listaTiposParametrosOP (121)
    en la izquierda: 152 153, en la derecha: 147
sentencia (122)
    en la izquierda: 154 155 156 157 158 159, en la derecha: 6 169
    170 171 172 173 174 175 176 179 180 181
sentenciaExpresion (123)
    en la izquierda: 160 161, en la derecha: 154
sentenciaCompuesta (124)
    en la izquierda: 162, en la derecha: 155
listaDeDeclaracionesOP (125)
    en la izquierda: 163 164, en la derecha: 162
listaDeSentenciasOP (126)
    en la izquierda: 165 166, en la derecha: 162
listaDeDeclaraciones (127)
    en la izquierda: 167 168, en la derecha: 163 168
listaDeSentencias (128)
    en la izquierda: 169 170, en la derecha: 165 170
sentenciaDeSeleccion (129)
    en la izquierda: 171 172 173, en la derecha: 156
sentenciaDeIteracion (130)
    en la izquierda: 174 175 176, en la derecha: 157
expresionOP (131)
    en la izquierda: 177 178, en la derecha: 176 184
sentenciaEtiquetada (132)
    en la izquierda: 179 180 181, en la derecha: 158
sentenciaDeSalto (133)
    en la izquierda: 182 183 184 185, en la derecha: 159
expresionConstante (134)
    en la izquierda: 186, en la derecha: 102 103 117 136 150 179


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                      desplazar e ir al estado 2
    IDENTIFICADOR             desplazar e ir al estado 3
    LITERAL_CADENA            desplazar e ir al estado 4
    CONSTANTE_DECIMAL         desplazar e ir al estado 5
    CONSTANTE_OCTAL           desplazar e ir al estado 6
    CONSTANTE_HEXA            desplazar e ir al estado 7
    CONSTANTE_REAL            desplazar e ir al estado 8
    TIPO_DE_DATO              desplazar e ir al estado 9
    SIZEOF                    desplazar e ir al estado 10
    OP_INCREMENTO_DECREMENTO  desplazar e ir al estado 11
    ESPEC_DE_CLASE            desplazar e ir al estado 12
    CALIFICADOR_DE_TIPO       desplazar e ir al estado 13
    STRUCT_O_UNION            desplazar e ir al estado 14
    ESPECIFICADOR_ENUM        desplazar e ir al estado 15
    IF                        desplazar e ir al estado 16
    SWITCH                    desplazar e ir al estado 17
    WHILE                     desplazar e ir al estado 18
    DO                        desplazar e ir al estado 19
    FOR                       desplazar e ir al estado 20
    CASE                      desplazar e ir al estado 21
    DEFAULT                   desplazar e ir al estado 22
    CONTINUE                  desplazar e ir al estado 23
    BREAK                     desplazar e ir al estado 24
    RETURN                    desplazar e ir al estado 25
    GOTO                      desplazar e ir al estado 26
    '\n'                      desplazar e ir al estado 27
    '+'                       desplazar e ir al estado 28
    '-'                       desplazar e ir al estado 29
    '*'                       desplazar e ir al estado 30
    '('                       desplazar e ir al estado 31
    '&'                       desplazar e ir al estado 32
    '!'                       desplazar e ir al estado 33
    '~'                       desplazar e ir al estado 34
    '{'                       desplazar e ir al estado 35
    ';'                       desplazar e ir al estado 36

    line                                  ir al estado 37
    expresion                             ir al estado 38
    expAsignacion                         ir al estado 39
    expCondicional                        ir al estado 40
    expOr                                 ir al estado 41
    expAnd                                ir al estado 42
    expIgualdad                           ir al estado 43
    expRelacional                         ir al estado 44
    expCorrimiento                        ir al estado 45
    expAditiva                            ir al estado 46
    expMultiplicativa                     ir al estado 47
    expDeConversion                       ir al estado 48
    expUnaria                             ir al estado 49
    operUnario                            ir al estado 50
    expPostfijo                           ir al estado 51
    expPrimaria                           ir al estado 52
    declaracion                           ir al estado 53
    especificadoresDeDeclaracion          ir al estado 54
    especificadorDeClaseDeAlmacenamiento  ir al estado 55
    especificadorDeTipo                   ir al estado 56
    calificadorDeTipo                     ir al estado 57
    especificadorDeStructOUnion           ir al estado 58
    structOUnion                          ir al estado 59
    especificadorDeEnum                   ir al estado 60
    nombreDeTypedef                       ir al estado 61
    sentencia                             ir al estado 62
    sentenciaExpresion                    ir al estado 63
    sentenciaCompuesta                    ir al estado 64
    sentenciaDeSeleccion                  ir al estado 65
    sentenciaDeIteracion                  ir al estado 66
    sentenciaEtiquetada                   ir al estado 67
    sentenciaDeSalto                      ir al estado 68


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   57 expPrimaria: IDENTIFICADOR .
  138 nombreDeTypedef: IDENTIFICADOR .
  181 sentenciaEtiquetada: IDENTIFICADOR . ':' sentencia

    ':'  desplazar e ir al estado 69

    IDENTIFICADOR        reduce usando la regla 138 (nombreDeTypedef)
    TIPO_DE_DATO         reduce usando la regla 138 (nombreDeTypedef)
    ESPEC_DE_CLASE       reduce usando la regla 138 (nombreDeTypedef)
    CALIFICADOR_DE_TIPO  reduce usando la regla 138 (nombreDeTypedef)
    STRUCT_O_UNION       reduce usando la regla 138 (nombreDeTypedef)
    ESPECIFICADOR_ENUM   reduce usando la regla 138 (nombreDeTypedef)
    '\n'                 reduce usando la regla 57 (expPrimaria)
    '\n'                 [reduce usando la regla 138 (nombreDeTypedef)]
    '*'                  reduce usando la regla 57 (expPrimaria)
    '*'                  [reduce usando la regla 138 (nombreDeTypedef)]
    '('                  reduce usando la regla 57 (expPrimaria)
    '('                  [reduce usando la regla 138 (nombreDeTypedef)]
    $default             reduce usando la regla 57 (expPrimaria)


estado 4

   62 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 62 (expPrimaria)


estado 5

   58 expPrimaria: CONSTANTE_DECIMAL .

    $default  reduce usando la regla 58 (expPrimaria)


estado 6

   60 expPrimaria: CONSTANTE_OCTAL .

    $default  reduce usando la regla 60 (expPrimaria)


estado 7

   59 expPrimaria: CONSTANTE_HEXA .

    $default  reduce usando la regla 59 (expPrimaria)


estado 8

   61 expPrimaria: CONSTANTE_REAL .

    $default  reduce usando la regla 61 (expPrimaria)


estado 9

   82 especificadorDeTipo: TIPO_DE_DATO .

    $default  reduce usando la regla 82 (especificadorDeTipo)


estado 10

   39 expUnaria: SIZEOF . expUnaria
   40          | SIZEOF . '(' nombreDeTipo ')'

    IDENTIFICADOR             desplazar e ir al estado 70
    LITERAL_CADENA            desplazar e ir al estado 4
    CONSTANTE_DECIMAL         desplazar e ir al estado 5
    CONSTANTE_OCTAL           desplazar e ir al estado 6
    CONSTANTE_HEXA            desplazar e ir al estado 7
    CONSTANTE_REAL            desplazar e ir al estado 8
    SIZEOF                    desplazar e ir al estado 10
    OP_INCREMENTO_DECREMENTO  desplazar e ir al estado 11
    '+'                       desplazar e ir al estado 28
    '-'                       desplazar e ir al estado 29
    '*'                       desplazar e ir al estado 30
    '('                       desplazar e ir al estado 71
    '&'                       desplazar e ir al estado 32
    '!'                       desplazar e ir al estado 33
    '~'                       desplazar e ir al estado 34

    expUnaria    ir al estado 72
    operUnario   ir al estado 50
    expPostfijo  ir al estado 51
    expPrimaria  ir al estado 52


estado 11

   37 expUnaria: OP_INCREMENTO_DECREMENTO . expUnaria

    IDENTIFICADOR             desplazar e ir al estado 70
    LITERAL_CADENA            desplazar e ir al estado 4
    CONSTANTE_DECIMAL         desplazar e ir al estado 5
    CONSTANTE_OCTAL           desplazar e ir al estado 6
    CONSTANTE_HEXA            desplazar e ir al estado 7
    CONSTANTE_REAL            desplazar e ir al estado 8
    SIZEOF                    desplazar e ir al estado 10
    OP_INCREMENTO_DECREMENTO  desplazar e ir al estado 11
    '+'                       desplazar e ir al estado 28
    '-'                       desplazar e ir al estado 29
    '*'                       desplazar e ir al estado 30
    '('                       desplazar e ir al estado 73
    '&'                       desplazar e ir al estado 32
    '!'                       desplazar e ir al estado 33
    '~'                       desplazar e ir al estado 34

    expUnaria    ir al estado 74
    operUnario   ir al estado 50
    expPostfijo  ir al estado 51
    expPrimaria  ir al estado 52


estado 12

   81 especificadorDeClaseDeAlmacenamiento: ESPEC_DE_CLASE .

    $default  reduce usando la regla 81 (especificadorDeClaseDeAlmacenamiento)


estado 13

   86 calificadorDeTipo: CALIFICADOR_DE_TIPO .

    $default  reduce usando la regla 86 (calificadorDeTipo)


estado 14

   91 structOUnion: STRUCT_O_UNION .

    $default  reduce usando la regla 91 (structOUnion)


estado 15

  131 especificadorDeEnum: ESPECIFICADOR_ENUM . identificadorOP '{' listaDeEnumeradores '}'
  132                    | ESPECIFICADOR_ENUM . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 75

    $default  reduce usando la regla 90 (identificadorOP)

    identificadorOP  ir al estado 76


estado 16

  171 sentenciaDeSeleccion: IF . '(' expresion ')' sentencia
  172                     | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 77


estado 17

  173 sentenciaDeSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 78


estado 18

  174 sentenciaDeIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 79


estado 19

  175 sentenciaDeIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    IDENTIFICADOR             desplazar e ir al estado 80
    LITERAL_CADENA            desplazar e ir al estado 4
    CONSTANTE_DECIMAL         desplazar e ir al estado 5
    CONSTANTE_OCTAL           desplazar e ir al estado 6
    CONSTANTE_HEXA            desplazar e ir al estado 7
    CONSTANTE_REAL            desplazar e ir al estado 8
    SIZEOF                    desplazar e ir al estado 10
    OP_INCREMENTO_DECREMENTO  desplazar e ir al estado 11
    IF                        desplazar e ir al estado 16
    SWITCH                    desplazar e ir al estado 17
    WHILE                     desplazar e ir al estado 18
    DO                        desplazar e ir al estado 19
    FOR                       desplazar e ir al estado 20
    CASE                      desplazar e ir al estado 21
    DEFAULT                   desplazar e ir al estado 22
    CONTINUE                  desplazar e ir al estado 23
    BREAK                     desplazar e ir al estado 24
    RETURN                    desplazar e ir al estado 25
    GOTO                      desplazar e ir al estado 26
    '+'                       desplazar e ir al estado 28
    '-'                       desplazar e ir al estado 29
    '*'                       desplazar e ir al estado 30
    '('                       desplazar e ir al estado 31
    '&'                       desplazar e ir al estado 32
    '!'                       desplazar e ir al estado 33
    '~'                       desplazar e ir al estado 34
    '{'                       desplazar e ir al estado 35
    ';'                       desplazar e ir al estado 36

    expresion             ir al estado 81
    expAsignacion         ir al estado 39
    expCondicional        ir al estado 40
    expOr                 ir al estado 41
    expAnd                ir al estado 42
    expIgualdad           ir al estado 43
    expRelacional         ir al estado 44
    expCorrimiento        ir al estado 45
    expAditiva            ir al estado 46
    expMultiplicativa     ir al estado 47
    expDeConversion       ir al estado 48
    expUnaria             ir al estado 49
    operUnario            ir al estado 50
    expPostfijo           ir al estado 51
    expPrimaria           ir al estado 52
    sentencia             ir al estado 82
    sentenciaExpresion    ir al estado 63
    sentenciaCompuesta    ir al estado 64
    sentenciaDeSeleccion  ir al estado 65
    sentenciaDeIteracion  ir al estado 66
    sentenciaEtiquetada   ir al estado 67
    sentenciaDeSalto      ir al estado 68


estado 20

  176 sentenciaDeIteracion: FOR . '(' expresionOP ';' expresionOP ';' expresionOP ')' sentencia

    '('  desplazar e ir al estado 83


estado 21

  179 sentenciaEtiquetada: CASE . expresionConstante ':' sentencia

    IDENTIFICADOR             desplazar e ir al estado 70
    LITERAL_CADENA            desplazar e ir al estado 4
    CONSTANTE_DECIMAL         desplazar e ir al estado 5
    CONSTANTE_OCTAL           desplazar e ir al estado 6
    CONSTANTE_HEXA            desplazar e ir al estado 7
    CONSTANTE_REAL            desplazar e ir al estado 8
    SIZEOF                    desplazar e ir al estado 10
    OP_INCREMENTO_DECREMENTO  desplazar e ir al estado 11
    '+'                       desplazar e ir al estado 28
    '-'                       desplazar e ir al estado 29
    '*'                       desplazar e ir al estado 30
    '('                       desplazar e ir al estado 31
    '&'                       desplazar e ir al estado 32
    '!'                       desplazar e ir al estado 33
    '~'                       desplazar e ir al estado 34

    expCondicional      ir al estado 84
    expOr               ir al estado 41
    expAnd              ir al estado 42
    expIgualdad         ir al estado 43
    expRelacional       ir al estado 44
    expCorrimiento      ir al estado 45
    expAditiva          ir al estado 46
    expMultiplicativa   ir al estado 47
    expDeConversion     ir al estado 48
    expUnaria           ir al estado 85
    operUnario          ir al estado 50
    expPostfijo         ir al estado 51
    expPrimaria         ir al estado 52
    expresionConstante  ir al estado 86


estado 22

  180 sentenciaEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 87


estado 23

  182 sentenciaDeSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 88


estado 24

  183 sentenciaDeSalto: BREAK . ';'

    ';'  desplazar e ir al estado 89


estado 25

  184 sentenciaDeSalto: RETURN . expresionOP ';'
